[package]
name = "release-party-br"
version = "0.3.2"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]

[dependencies]
reqwest = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
clap = {version = "2.32", features = ["yaml"]}
clippy = {version = "*", optional = true}

[dev-dependencies]
hyper = "0.11"

[features]
default = ["yaml"]
yaml = []