[package]
name = "release-party-br"
version = "0.5.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]

[dependencies]
reqwest = { version = "0.9", features = ["hyper-011"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
clap = {version = "2.32", features = ["yaml"]}
clippy = {version = "*", optional = true}
lazy_static = "1.2.0"
dirs = "1.0.5"

[dev-dependencies]
hyper = "0.12"

[features]
default = ["yaml"]
yaml = []
